fix: update custom scrollbar dimensions for improved visibility

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@ body{
   }
 
   .custom-scrollbar::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
+    width: 16px;
+    height: 2px;
   }
 
   .custom-scrollbar::-webkit-scrollbar-track {
